--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 - [x] Chart in canvas
-  - [] Sun, Moon, Ascension
+  - [x] Sun, Moon, Ascension
 - [] Registration
-  - [] sqlite DB
+  - [x] sqlite DB
   - [] Store DOB
   - [] Get Place of Birth coordinates
